--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-service
+  name: frontend
   namespace: mer
   labels:
-    service: frontend-service
+    service: frontend
 spec:
   type: NodePort
   selector:
@@ -12,5 +12,5 @@ spec:
   ports:
   - protocol: TCP
     nodePort: 30090
-    port: 3000
+    port: 80
     name: frontend
