Added soundwaves pc and pvc

--- a/k8s/2-persistentvolumeclaim.yaml
+++ b/k8s/2-persistentvolumeclaim.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: task-pv-claim
+  name: pvc-audios
   namespace: mer
 spec:
   storageClassName: manual
@@ -9,4 +9,17 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 2Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: pvc-soundwaves
+  namespace: mer
+spec:
+  storageClassName: manual
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 2Gi
