--- a/k8s/1-persistentvolume.yaml
+++ b/k8s/1-persistentvolume.yaml
@@ -1,15 +1,29 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-volume
-  namespace: mer
+  name: pv-audios
   labels:
       type: local
 spec:
   storageClassName: manual
   capacity:
-    storage: 1Gi
+    storage: 2Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
     path: "/Audios"
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pv-soundwaves
+  labels:
+      type: local
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 2Gi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: "/Soundwaves"
