--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -12,5 +12,6 @@ spec:
   ports:
   - protocol: TCP
     nodePort: 30090
-    port: 80
+    port: 3000 # dev
+    # port: 80 # prod
     name: frontend
